# cmake-vs-g-video

./: CMakeLists.txt  README.md  main.cpp  student.cpp  student.h
